tests/fixtures/crates/trybuild/tests/ui/test.stderr
error: a
 --> tests/ui/test.rs:3:20
  |
3 | #[trybuild_test::m(compile_error!("a");)]
  |                    ^^^^^^^^^^^^^^^^^^^
